--- a/expedition/App.config
+++ b/expedition/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name ="db_expedition" connectionString="Server=localhost;Port=5432;User Id=webuser;Password=test123;Database=expedition" 
+         providerName="Npgsql"/>
+
+  </connectionStrings>
 </configuration>
